# srfb

./: .gitignore  Makefile  README.md  fb-forecast-any-date.py  fb-forecast.py  fb-post.py  fb-prepare.py  fb.py  main.py  pyproject.toml
utils/: forecasts.py  questions.py
